# rust-erp-cli

./: .env.example  .gitignore  2025-10-01-caveat-the-messages-below-were-generated-by-the-u.txt  API_TEST_REPORT.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_RULES.md  Dockerfile  Dockerfile.dev  ERP_TEST_REPORT.md  LICENSE  README.md  WORK_SCHEDULE.md  combined_test.json  create_enum.sql  custom_report.csv  custom_report.json  docker-compose.dev.yml  docker-compose.yml  enum_fix.sql  financial_overview.csv  fix_uuid_migration.sql  init_schema.sql  inventory_status_20250927_134907.json  low_stock_report.json  problem.txt  sales_summary_20250927_133716.html  sales_summary_20250927_133731.html  sales_summary_20250927_134850.json  sales_summary_20250927_232830.html  sales_summary_20250927_232848.html  sales_summary_20250927_232902.html  sales_summary_20250928_000856.html  test_custom.json  test_customer_report.json
.claude/: mcp.json  settings.local.json
.github/workflows/: ci.yml  (+1 more)
.sqlx/: query-07910ec11b6263c85421c61842bcd57ab8fe50d1a9da94117fc4bacfc8a673be.json  query-13e98445593f9af4c19d2b00cbd8f43de593e34261b04da76171983d5f5d20d3.json  query-1773a2c8136f5de903c1f8f6e7159ea342ed79a34d02019f4bb71238d971d04c.json  query-18cd90d65290bedc670b59bf6b0aacfee561b8999ceeb353194f2d7eafad1605.json  query-198736ca238908a342e510258314d99a19eeb917cfb8b4544d2985fd56965e92.json  query-3ff0ca583f3e78d9353c800ef1e9f067a4e604fb1201245bf7c84c785e7d643f.json  query-4487c4dffe76bde5db31df4e2076e869677795a62ba3d6cd03f0006aefafbbf1.json  query-4f5c852e9a147da0b4ffb5a030676f007dbaadeab448de9fd7460919ce208b75.json  query-5274c9e4a0ef5f6822664f9e76b0a4df3cd55ea86ba7e82fee1f1b15e9b57a99.json  query-65bb8065d830087d92dd3e53af5c80bbbe63902ce53cfaa5cf9e08e7f7959a10.json  query-7030055f491501cb6322580182831af00f6dbbed04136eb22f2897d51c87cee2.json  query-8a186891b23c59d885722e903973d1bee69a86159ef59997326f843122ce3efb.json  query-8fb0d471666c6f7e0c2626dfe1de87962a28473b179c35d3aeaa1160b74faff7.json  query-908a5480a6afb6b802cf59e89240eee09f4c81614bdb68e1c916b21e923e6a51.json  query-97d3c16fbfcb7d8be4711f3daa38ed003e434b5fd0b70648d3f830133d347d87.json  query-b94c0197d46d4b073f8ec34728624ff72c8aa91c040ebcb28c9110205d2ebb91.json  query-bf1c2057ffe76f5e9437458207623979087ad891e37a0e83c2a15bf7763554d6.json  query-bf4d7298a56f4a2256bafb498679daee86c05c2b582bded4e93437507d7345da.json  query-c39a55fa3b1c82ef53a1a21a17290fca8638f6be31b58baf907c54f9afde9bf5.json  query-cead2f9e8bdc9b7aadf2622632aba82972aebf44b8b31ec8c552f2e31c0d27ca.json  query-cedb7fdcee13327f252dca9425b1efca4310a837118aa33b05d4f084b7755092.json  query-d447f3135a9e42d37a635c22daa4e67858048b9ec4e7ec0eff7a5f32dfa77461.json  query-d819615b1f93c355b8cd30df39392f76c6e7d03b15a273ad5e3197b2965b1f0e.json  query-dd8f8a34f48d713fb9c9202c1fc7eafb434fe16490d4ee7103dfdfc7ba9606a8.json
config/: default.toml  development.toml  production.toml
docs/: api-reference.md  architecture.md  development.md  installation.md  user-guide.md
migrations/: 001_initial.sql  002_add_customers.sql  003_add_inventory.sql  004_add_sales_orders.sql  005_test_migration.sql  006_add_customer_status.sql  007_enable_uuid_extension.sql  008_update_customer_schema.sql  009_create_enum_types.sql  010_convert_varchar_to_uuid.sql  011_expand_decimal_precision.sql  012_add_customer_type_column.sql
reports/: [O] customers_verification_report.md  [O] inventory_update_test_report_v2.md  [O] sales-list-orders-verification-report.md  [O] sales_create_order_test_report.md  [O]_customer_analysis.md  [O]_customer_delete_v2.md  [O]_customer_search.md  [O]_customer_update.md  [O]_inventory_add.md  [O]_inventory_list.md  [O]_inventory_remove.md  [O]_reports_financial.md  [O]_reports_inventory_status.md  [O]_reports_sales_summary.md  [O]_sales_update_order.md  [O]customer_add_final_verification.md  [O]inventory_low-stock_report.md  customer-analysis-test-report.md  customer-cascade-delete-implementation.md  customer_add_verification.md  customer_search_test_report.md  customers_verification_report.md  inventory-add-validation-report.md  inventory_comprehensive_verification_report.md  inventory_list_validation_report.md  inventory_update_test_report.md  invoice_generation_test_report.md  sales-list-orders-검증보고서.md  sales-list-orders-재검증보고서.md  고객삭제기능_검증보고서.md  고객정보수정_검증보고서.md  매출요약보고서_검증결과.md  재고_관리_검증_보고서.md  재고상태보고서_검증결과.md  재무_개요_보고서_테스트_결과.md  주문상태변경_검증보고서.md
scripts/: install.sh  setup-dev.sh
src/: app_module.rs  lib.rs  main.rs
tests/: cli_integration.rs  database_integration.rs
(+73 files in other folders)
