[package]
name = "erp-cli"
version = "0.1.0"
edition = "2021"
authors = ["ERP CLI Team"]
description = "A high-performance modular ERP CLI system built with Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-org/erp-cli"
keywords = ["erp", "cli", "business", "management"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "erp"
path = "src/main.rs"

[dependencies]
# CLI 관련
clap = { version = "4.0", features = ["derive", "color", "suggestions"] }
console = "0.15"
indicatif = "0.17"

# 비동기 처리
tokio = { version = "1.0", features = ["full"] }

# 데이터베이스
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "uuid",
    "chrono",
    "bigdecimal",
    "migrate"
] }

# 직렬화/역직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 설정 관리
config = "0.14"
toml = "0.8"

# 에러 처리
thiserror = "1.0"
anyhow = "1.0"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# 날짜/시간
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 암호화
bcrypt = "0.15"
jsonwebtoken = "9.0"

# 소수점 연산
rust_decimal = { version = "1.0", features = ["serde"] }

# HTTP 클라이언트 (API 통신용)
reqwest = { version = "0.11", features = ["json"] }

# 비동기 라이브러리
futures = "0.3"

# 정규표현식
regex = "1.10"

# 테이블 출력
tabled = "0.14"
comfy-table = "7.0"

# CSV 처리
csv = "1.3"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.11"
serial_test = "3.0"
tokio-test = "0.4"
rstest = "0.18"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "packed"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true

[profile.test]
opt-level = 0
debug = 2
split-debuginfo = "packed"
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
rpath = false