[package]
name = "erp-cli"
version = "0.1.0"
edition = "2021"
authors = ["ERP Team <team@example.com>"]
description = "A high-performance modular ERP CLI system built with Rust"
license = "MIT"
repository = "https://github.com/example/erp-cli"
keywords = ["erp", "cli", "business", "inventory", "sales"]
categories = ["command-line-utilities", "database"]
default-run = "erp"

[[bin]]
name = "erp"
path = "src/main.rs"

[dependencies]
# CLI 관련
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

# 비동기 처리
tokio = { version = "1.0", features = ["full"] }

# 데이터베이스
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "rust_decimal", "macros"] }

# 직렬화/역직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
quick-xml = { version = "0.31", features = ["serialize"] }

# 설정 관리
config = "0.14"
toml = "0.8"

# 에러 처리
thiserror = "1.0"
anyhow = "1.0"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "json"] }
tracing-appender = "0.2"

# 비동기 trait
async-trait = "0.1"

# 날짜/시간
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 암호화
bcrypt = "0.14"
jsonwebtoken = "9.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"

# 정규식
regex = "1.0"
lazy_static = "1.4"

# 소수점 연산
rust_decimal = { version = "1.0", features = ["serde"] }

# HTTP 클라이언트 (API 통신용)
reqwest = { version = "0.11", features = ["json"] }

# 테이블 출력
tabled = "0.15"
comfy-table = "7.0"

# 환경변수 관리
dotenvy = "0.15"

# 시스템 모니터링
sysinfo = "0.29"
tar = "0.4"

[dev-dependencies]
# 테스트
tempfile = "3.0"
mockall = "0.11"
rstest = "0.18"
assert_cmd = "2.0"
predicates = "3.0"

# 테스트 도구
# cargo-nextest = "0.9"  # Commented out due to compilation issues
cargo-tarpaulin = "0.27"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
opt-level = 1
debug = true

# 개발 도구들 (cargo install로 설치)
# cargo install cargo-clippy
# cargo install cargo-fmt
# cargo install cargo-nextest
# cargo install cargo-tarpaulin
# cargo install flamegraph